--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,8 +5,10 @@ sonar.organization=jfmaia
 #sonar.projectName=BsIn
 #sonar.projectVersion=1.0
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+# Path is relative to the sonar-project.properties file. Defaults to .
+sonar.sources=.
+sonar.sources.inclusions=**/**.py
+sonar.exclusions=**/tests/**, **/static/**
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
